Fix the style of group#show

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,8 +1,8 @@
 <div class="top-module">
-  <div id="group-title">
+  <div class="title">
     <h3>Groups</h3>
   </div>
-  <div id="group-new-links">
+  <div class="link">
     <%= link_to '＋ New Group', new_group_path, :class => 'btn', :id => 'new_btn' %>
   </div>
 </div>
