--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -74,6 +74,7 @@
 
 #albums-list li {
   display: inline-block;
+  padding-bottom: 5px;
 }
 
 #group-information {
@@ -125,6 +126,7 @@
   -webkit-box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
   -moz-box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
   box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
+  margin-bottom: 5px;
 }
 
 .effect {
@@ -159,4 +161,12 @@
   transform: rotate(3deg);
   right: 10px;
   left: auto;
+}
+
+.photo-text {
+  text-align: center;
+}
+
+.photo-text strong {
+  font-size: 14px;
 }
