--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -41,12 +41,13 @@
       <div class="box effect">
         <%= image_tag photo.avatar.url, :width => '200' %>
       </div>
-      <br>
-      from <%= link_to photo.user.name, photo.user %>
-      <br>
-      in <%= link_to photo.album.name, photo.album %>
-      <br>
-      <br>
+      <div class="photo-text">
+        from <%= link_to photo.user.name, photo.user %>
+        <br>
+        in <%= link_to photo.album.name, photo.album %>
+        <br>
+        <br>
+      </div>
     </div>
   <% end %>
 </div>
