--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Albums controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#more-btn {
+  position:relative;
+  width:900px;
+  height:20px;
+  text-align: center;
+  margin: 20px 0 50px;
+  border-style: dotted;
+  border-width: thin;
+}
+
+#more-btn a {
+  display:block;
+  width:100%;
+  height:100%;
+  position:absolute;
+  left:0;
+  top:0;
+}
