Fix Ajax functionality in likes#create ref #9

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -8,7 +8,7 @@
   <%= link_to image_tag(@photo.user.picture, :width => '40'), @photo.user %>
   <h3>by <%= link_to @photo.user.name, @photo.user %></h3>
   </div>
-  <div id="<%= "like_button#{@photo.id}" %>" class="like-button">
+  <div id="like-button" class="like-button">
     <%= render 'likes/like_button', :photo => @photo %>
   </div>
 </div>
@@ -45,10 +45,10 @@
   </div>
   <div id="photos-like">
     <div class="top-module">
-      <h3><%= @photo.likes.count %> likes</h3>
+      <h3><span id="like-count"><%= @photo.likes.count %></span> likes</h3>
     </div>
     <div id="like-user">
-      <% @photo.likes.each do |like| %>
+      <% @likes.each do |like| %>
         <%= image_tag like.user.picture, :width => '40' %>
       <% end %>
     </div>
