--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,2 +1,3 @@
-$('<%= "#like_button#{@like.photo_id}" %>').html("<%= j render 'like_button', :object => @photo %>");
-$('<%= "#like_count#{@like.photo_id}" %>').html('<%= @likes.count %> likes');
+$('#like-button').html("<%= j render 'like_button', :object => @photo %>");
+$('#like-count').html("<%= @likes.count %>");
+$('#like-user').html("<% @likes.each do |like| %> <%= j image_tag(like.user.picture, :width => '40') %> <% end %>");
