--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -81,7 +81,7 @@ form {
     float: right;
   }
 
-  #show-comments {
+  .show-comments {
     height: 50px;
     margin: 5px 0 5px;
   }
@@ -92,12 +92,12 @@ form {
   float: right;
 }
 
-#commenter-image {
+.commenter-image {
   width: 40px;
   float:left;
 }
 
-#commenter-meta {
+.commenter-meta {
   margin: 0 0 0 10px;
   float:left;
 
