--- a/app/views/comments/create.js.erb
+++ b/app/views/comments/create.js.erb
@@ -1,3 +1,3 @@
-$('<%= "#comment_form#{@comment.photo_id}" %>').html("<%= j render('comments/comment') %>");
-$('<%= "#comment_count#{@comment.photo_id}" %>').html('<%= @comments.count %> comments');
-$('<%= "#comment_body#{@comment.photo_id}" %>').html('<% @comments.each do |comment| %><%= image_tag comment.user.picture, :width => "35" %><%= comment.body %><br><% end %>');
+$('#comment-form').html("<%= j render('comments/comment') %>");
+$('#comment-count').html('<%= @comments.count %>');
+$('#show-comments').html('<% @comments.each do |comment| %><div class="show-comments"><div class="commenter-image"><%= j link_to image_tag(comment.user.picture, :width => '40'), comment.user %></div><div class="commenter-meta"><%= j link_to(comment.user.name, comment.user) %><br><%= j comment.body %></div></div><% end %>');
