--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -14,7 +14,7 @@
 }
 
 .link {
-  height: 50px;
+  height: 30px;
   padding: 15px 0;
   float: right;
 }
@@ -72,9 +72,9 @@
   float: left;
 }
 
-#albums-list li {
-  display: inline-block;
-  padding-bottom: 5px;
+.albums-elements {
+  margin: 0 2px 20px 2px;
+  float: left;
 }
 
 #group-information {
