Fix the style of photos list at albums#show

--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -3,8 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .added-photo {
-  display: inline-block;
+  margin: 0 2px 20px 2px;
   padding-bottom: 0;
+  float: left;
 }
 
 .photo-info {
