Fix the style of photos at photos#new

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -3,5 +3,6 @@
 <%= render 'form' %>
 
 <div id="added-list"></div>
-<br>
-<%= link_to 'Back', @album %>
+<div id="back-link">
+  <%= link_to 'Back', @album %>
+</div>
