--- a/app/views/photos/create.js.erb
+++ b/app/views/photos/create.js.erb
@@ -1,1 +1,1 @@
-$("#added-list").append("<div class='added-photo'><%= j render(@photo) %></div>");
+$('#added-list').append("<%= j render(@photo) %>");
