Fix order of albums at groups#show ref #12

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -33,7 +33,7 @@
 </div>
 <br>
 <div id="albums-list">
-  <% @group.albums.each do |album| %>
+  <% @albums.each do |album| %>
     <div class="albums-elements">
       <div class="box effect">
         <% if photo = album.photos.first %>
