--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,14 @@
-<h2>Welcome to fillmboard</h2>
+<div id="home-info">
+  <div id="home-title">
+    Share photos with your close friends
+  </div>
+  <div id="home-subtitle">
+    Photo makes your friendship well.
+  </div>
+  <div id="sign-in-link">
+    <%= link_to image_tag('btn_fb.png'), "/auth/facebook" %>
+  </div>
+</div>
 
 <% if current_user %>
   <div id="friends">
