--- a/app/views/likes/create.js.erb
+++ b/app/views/likes/create.js.erb
@@ -1,3 +1,3 @@
-$('#like-button').html("<%= j render 'like_button', :object => @photo %>");
-$('#like-count').html("<%= @likes.count %>");
+$("<%= "#like_button#{@photo.id}" %>").html("<%= j render 'like_button', :photo_id => @photo.id %>");
+$("<%= "#like_count#{@photo.id}" %>").html("<%= @likes.count %>");
 $('#like-user').html("<% @likes.each do |like| %> <%= j image_tag(like.user.picture, :width => '40') %> <% end %>");
