Fix the style of album title at photos#show

--- a/app/assets/stylesheets/photos.css.scss
+++ b/app/assets/stylesheets/photos.css.scss
@@ -56,6 +56,10 @@ form {
 #photos-album {
   clear: both;
   margin: 0 0 30px;
+
+  #album-thumb {
+    margin-top: 5px;
+  }
 }
 
 #photos-reputation {
