--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -17,9 +17,11 @@
   <div class="top-module">
     <h3><%= link_to @photo.album.name, @photo.album %>'s photos</h3>
   </div>
-  <% @photos.each do |photo| %>
-    <%= link_to image_tag(photo.avatar.url(:thumb), :width => '50'), photo %>
-  <% end %>
+  <div id="album-thumb">
+    <% @photos.each do |photo| %>
+      <%= link_to image_tag(photo.avatar.url(:thumb), :width => '50'), photo %>
+    <% end %>
+  </div>
 </div>
 <div id="photos-reputation">
   <div id="photos-comment">
