Show user uploads at users#show ref #15

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,24 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#profile {
+  height: 110px;
+
+  img{
+    float: left;
+  }
+
+  h3 {
+    float: left;
+    margin-left: 20px;
+  }
+}
+
+#user-uploads {
+  clear: both;
+}
+
+.pagination {
+  text-align: center;
+}
