--- a/app/assets/stylesheets/albums.css.scss
+++ b/app/assets/stylesheets/albums.css.scss
@@ -4,20 +4,21 @@
 
 #more-btn {
   position:relative;
-  width:900px;
+  width:938px;
   height:20px;
   text-align: center;
   margin: 20px 0 50px;
-  border-style: dotted;
-  border-width: thin;
   clear: both;
 }
 
 #more-btn a {
+  color: #333;
   display:block;
   width:100%;
   height:100%;
   position:absolute;
   left:0;
+  border-style: dotted;
+  border-width: thin;
   top:0;
 }
