--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,13 +29,27 @@
             <ul class="nav">
               <li><%= link_to "グループ", user_groups_path(current_user.id) %></li>
               <li><%= link_to "お知らせ" %></li>
-              <li><%= link_to "個人設定" , edit_user_path(current_user.id) %></li>
             </ul>
             <div id="user-links">
               <% if current_user %>
-                <%= image_tag current_user.picture, :width => '30px' %>
-                <%= link_to current_user.name, current_user %>
-                <%= link_to "Sign out", signout_path %>
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                    <%= image_tag current_user.picture, :width => '30px' %>
+                    <%= current_user.name %>
+                    <b class="caret"></b>
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li>
+                      <%= link_to "個人ページを見る", current_user %>
+                    </li>
+                    <li>
+                      <%= link_to "個人設定" , edit_user_path(current_user.id) %>
+                    </li>
+                    <li>
+                      <%= link_to "Sign out", signout_path %>
+                    </li>
+                  </ul>
+                </li>
               <% end %>
             </div>
           <% end %>
@@ -48,14 +62,9 @@
       <% flash.each do |name, msg| %>
         <%= content_tag :div, msg, id: "flash_#{name}" %>
       <% end %>
-      
-        <div class="row">
-          <div class="span12"><%= yield %></div>
-          <!--<div class="span2">
-            <h2>About us</h2>
-            brabrabrabra
-          </div>-->
-        </div>
+      <div class="row">
+        <div class="span12"><%= yield %></div>
+      </div>
     </div>
   </body>
 </html>
