Fix top photo at home#index

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -4,8 +4,10 @@
 
 
 .home-body {
-  background-image: url('8275344932_d8b1df8be0_o.jpg');
+  background-image: url('top_photo.jpg');
   background-size:cover;
+  background-repeat: no-repeat;
+  height: 100%;
 }
 
 #home-info {
